Word overlapping fixed on landing page

--- a/src/app/components/landing/landing.component.css
+++ b/src/app/components/landing/landing.component.css
@@ -19,4 +19,6 @@ h1 {
     font-size: 6rem;
     margin-top: 30vh;
     margin-bottom: 10vh; 
+    white-space: break-spaces;
+    line-height: 96px;
 }
